# WindowsModula2

./: .gitattributes  .gitignore  Cargo.toml  MANIFESTO.md  README.md  test-howto.md
.cargo/: config.toml
Mod/: gc_stress.mod  hello.mod
Mod/tests/: T30020Helper.def  T30020Helper.mod  T30030ScalarHelper.def  T30030ScalarHelper.mod  T30040StateHelper.def  T30040StateHelper.mod  T30050Graph.def  T30050Graph.mod  T30050Leaf.def  T30050Leaf.mod  T30050Mid.def  T30050Mid.mod  T30060Counter.def  T30060Counter.mod  T40020RecordHelper.def  T40020RecordHelper.mod  T40070Res.def  T40070Res.mod  T90EnumLib.def  T90EnumLib.mod  T90Feed.def  T90Feed.mod  T90Leaf.def  T90Leaf.mod  T90Mid.def  T90Mid.mod  T91BadSig.def  T91BadSig.mod  T91MallocLib.def  gc-report-grow-clusters.mod  gc-report-grow-then-free.mod  gc-report-pressure-churn.mod  gc-report-retained-live.mod  gc-report-transient-alloc.mod  gc-system-collect-gcreport.mod  perf-factorial-o2.mod  perf-fib-o2.mod  perf-primes-o2.mod  perf-sieve-o2.mod  t-10-010-const-arith.mod  (+271 more)
demos/: .gitignore  README.md  asm_demo.mod  audio_play.mod  audio_sfx.mod  bigint_demo.mod  bigrat_demo.mod  calculator.mod  chart_demo.mod  codecs_demo.mod  collections_demo.mod  concurrent_server_demo.mod  decimal_demo.mod  drain_server_demo.mod  echo_server_demo.mod  editor.mod  galaga.mod  gameview_demo.mod  glimmer.mod  heap_analyze_test.mod  heap_guard_test.mod  julia_gpu.mod  life.mod  lut_gpu.mod  mandelbrot.mod  mandelbrot_gpu.mod  mathlib.mod  minesweeper.mod  music_play.mod  nbsocket_demo.mod  ode_to_joy.mid  paneshell_13a.mod  paneshell_13b.mod  paneshell_textgrid.mod  parallax_gpu.mod  paths_demo.mod  pipe_ping.mod  pipe_server_test.mod  plasma_gpu.mod  ptcl_test.mod  (+13 more)
docs/: aot.md  com-server-design.md  language-bringup-journal.md  m2new-port-assessment.md  module-graph.md  phase2-plan.md  semantics-audit.md  strings.md  win32_calls.md
docs/design/: by-repeat-constructors.md  char-width-and-for-to-max.md  com-interfaces.md  fastpanes-help.md  fastpanes-projects.md  fastpanes-script-language.md  guard-ismember.md  m2winrt-runtime-library.md  m2winrt-security-checklist.md  multidim-open-arrays.md  pane-shell-mdi.md  pane-shell-sprints.md  real-string-conversion.md  runtime-self-hosting.md  simd-laned-vectors.md
docs/m2-guide/: declarations-and-types.md  expressions-and-operators.md  getting-started.md  index.md  lexical-structure.md  memory-and-exceptions.md  modules-and-compilation.md  objects-and-classes.md  procedures.md  reference.md  standard-environment.md  statements-and-control-flow.md
docs/newm2-manual/: 01-getting-started.md  02-lexical-structure.md  03-modules-and-compilation.md  04-declarations-and-types.md  05-expressions-and-operators.md  06-statements-and-control-flow.md  07-procedures.md  08-objects-and-classes.md  09-standard-environment.md  10-memory-and-exceptions.md  11-reference.md  12-grammar-summary.md  index.md
docs/papers/: com-vtables-before-after.md
docs/sieve-o2-debug/: perf-sieve.asm.txt  perf-sieve.ir.txt  perf-sieve.llvm.txt
new-asm/: Cargo.toml
new-asm/src/: lib.rs  substitute.rs  types.rs
projects/FastM2/: DESIGN.md  FastM2.mod  README.md
projects/FastPanesM2/: FastPanesM2.exe.manifest  FastPanesM2.mod  README.md  RELEASE.md  cmpl_demo.mod  ide_exec.ps1  make-release.sh  pipe_client.ps1  sample.mod  snap.sh
scripts/: run-smoke.ps1
src/newm2-driver/: Cargo.toml
src/newm2-driver/src/: main.rs  server.rs
src/newm2-driver/tests/: aot_build.rs
src/newm2-ir/: Cargo.toml
src/newm2-ir/src/: block.rs  builder.rs  func.rs  inst.rs  lib.rs  lower.rs  module.rs  print.rs
src/newm2-lexer/: Cargo.toml
src/newm2-lexer/src/: lib.rs  preprocess.rs  token.rs
src/newm2-lexer/tests/: real_files.rs
src/newm2-llvm/: Cargo.toml
src/newm2-llvm/src/: codegen.rs  jit_mm.rs  lib.rs
src/newm2-loader/: Cargo.toml  build.rs
src/newm2-loader/src/: cache.rs  graph.rs  lib.rs  loader.rs  print.rs  search_path.rs  win32_finder.rs
src/newm2-parser/: Cargo.toml
src/newm2-parser/src/: ast.rs  lib.rs  parser.rs  print.rs  types_out.rs
src/newm2-parser/tests/: real_files.rs
src/newm2-runtime/: Cargo.toml
src/newm2-runtime/src/: aot.rs  bitops.rs  callback.rs  com.rs  coroutine.rs  crash.rs  exceptions.rs  file.rs  fmath.rs  gc.rs  gc_stubs.rs  heap.rs  io.rs  lib.rs  program_args.rs  rtti.rs  safepoint.rs  storage.rs  strings.rs  sysclock.rs  termination.rs
src/newm2-sema/: Cargo.toml
src/newm2-sema/src/: analyze.rs  class.rs  completion.rs  constant.rs  describe.rs  heapcheck.rs  iface.rs  iid.rs  lib.rs  print.rs  scope.rs  symcache.rs  types.rs
src/newm2-test-matrix/: Cargo.toml
src/newm2-test-matrix/src/: main.rs
src/newm2-winapi-gen/: Cargo.toml
src/newm2-winapi-gen/src/: build.rs  db.rs  emit.rs  lib.rs  main.rs  policy.rs
tests/newm2-compat-tests/: Cargo.toml  classes.expected  hello_graph.expected  iochan.expected  shobjidl.expected
tests/newm2-compat-tests/fixtures/: classes.def  hello.mod
tests/newm2-compat-tests/src/: lib.rs
tests/newm2-compat-tests/tests/: snapshots.rs
tests/newm2-tests/: Cargo.toml  t
tests/newm2-tests/src/: lib.rs  testdb.rs
tests/newm2-tests/tests/: m2_tests.rs  win32_beep.rs  winapi_gen_jit.rs
tools/doccrate/: AUTHORING.md  Browse-Docs.ps1  Test-Render.ps1
