[package]
name = "newm2-loader"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
bincode = "1.3"
newm2-lexer = { path = "../newm2-lexer" }
newm2-parser = { path = "../newm2-parser" }
# Note: sema depends on loader (not the other way around). The
# Phase 0 stub had the arrow backwards; corrected in Phase 2.
serde = { version = "1", features = ["derive"] }

# build.rs bakes the Win32 def-finder index into the binary at compile time.
[build-dependencies]
bincode = "1.3"
